--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@ h1{
   padding:12px;
   border:none;
   border-radius:12px;
-  background:#43a047;
+  background:#43a047; /* verde */
   color:#fff;
   font-weight:600;
-  font-size:16px
+  font-size:16px;
+  cursor:pointer;
 }
 
 /* ===== LISTA ===== */
@@ -116,14 +117,15 @@ main{
   font-weight:600;
   display:flex;
   align-items:center;
-  justify-content:center
+  justify-content:center;
+  cursor:pointer;
 }
 .add{
-  background:#000;
+  background:#43a047; /* verde */
   color:#fff
 }
 .del{
-  background:#ff3b30;
+  background:#ff3b30; /* rojo */
   color:#fff
 }
 
@@ -157,7 +159,10 @@ main{
   border:none;
   border-radius:10px;
   padding:12px;
-  font-weight:600
+  font-weight:600;
+  background:#43a047; /* verde */
+  color:#fff;
+  cursor:pointer;
 }
 
 /* ===== MODALES ===== */
@@ -196,9 +201,10 @@ main{
   padding:10px 0;
   border:1px solid #000;
   border-radius:12px;
-  background:#fff;
+  background:#43a047; /* verde */
   font-weight:600;
-  color:#000
+  color:#fff;
+  cursor:pointer;
 }
 
 /* ===== BOTONES UNIDAD ===== */
@@ -211,9 +217,10 @@ main{
   padding:10px 0;
   border:1px solid #000;
   border-radius:12px;
-  background:#fff;
+  background:#43a047; /* verde */
   font-weight:600;
-  color:#000
+  color:#fff;
+  cursor:pointer;
 }
 
 /* ACTIVO */
@@ -230,20 +237,22 @@ main{
 }
 .modal #save,
 .modal #add{
-  background:#43s43a047;
+  background:#43a047; /* verde */
   color:#fff;
   border:none;
   border-radius:12px;
   padding:12px;
-  font-weight:600
+  font-weight:600;
+  cursor:pointer;
 }
 .modal #cancel{
-  background:#ff3b30;
+  background:#ff3b30; /* rojo */
   color:#fff;
   border:none;
   border-radius:12px;
   padding:12px;
-  font-weight:600
+  font-weight:600;
+  cursor:pointer;
 }
 </style>
 </head>
