--- a/index.html
+++ b/index.html
@@ -1,81 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Despensa</title>
-
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#4CAF50">
-
-<style>
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:-apple-system, BlinkMacSystemFont, sans-serif;
-  background:#f2f2f7
-}
-
-/* ===== HEADER ===== */
-header{
-  background:#fff;
-  padding:12px;
-  border-bottom:1px solid #ddd
-}
-.top{
-  display:flex;
-  align-items:center;
-  gap:10px
-}
-.menu{
-  font-size:22px;
-  cursor:pointer
-}
-.addMain{
-  margin-left:auto;
-  font-size:16px;
-  cursor:pointer;
-  font-weight:600
-}
-h1{
-  margin:0;
-  font-size:20px
-}
-.search input{
-  width:100%;
-  padding:10px;
-  font-size:16px;
-  border:none;
-  border-radius:10px;
-  background:#e5e5ea
-}
-
-/* ===== DRAWER ===== */
-#drawer{
-  position:fixed;
-  top:0;bottom:0;left:0;
-  width:260px;
-  background:#fff;
-  transform:translateX(-100%);
-  transition:.3s;
-  padding:16px;
-  z-index:20
-}
-#drawer.open{transform:translateX(0)}
-#drawer button{
-  width:100%;
-  padding:12px;
-  margin-bottom:8px;
-  border:1px solid #000;
-  border-radius:12px;
-  background:#fff;
-  font-weight:600
-}
-#drawer button.active{
-  background:#000;
-  color:#fff
-}
-
 /* ===== BOTÓN AÑADIR ARTÍCULO ===== */
 #addItemBtn{
   display:none;
@@ -92,10 +14,6 @@ h1{
 }
 
 /* ===== LISTA ===== */
-main{
-  padding:12px;
-  padding-bottom:260px
-}
 .item{
   background:#fff;
   border-radius:12px;
@@ -129,40 +47,60 @@ main{
   color:#fff
 }
 
+/* ===== BOTONES CANTIDAD ===== */
+.btns.qty{
+  display:grid;
+  grid-template-columns:repeat(5,1fr);
+  gap:8px
+}
+.btns.qty button{
+  padding:10px 0;
+  border:1px solid #000;
+  border-radius:12px;
+  background:#fff; /* vuelve a blanco */
+  font-weight:600;
+  color:#000;
+  cursor:pointer;
+}
+
+/* ===== BOTONES UNIDAD ===== */
+.btns.unit{
+  display:flex;
+  gap:8px
+}
+.btns.unit button{
+  flex:1;
+  padding:10px 0;
+  border:1px solid #000;
+  border-radius:12px;
+  background:#fff; /* vuelve a blanco */
+  font-weight:600;
+  color:#000;
+  cursor:pointer;
+}
+
+/* ACTIVO */
+.btns button.active{
+  background:#000;
+  color:#fff
+}
+
 /* ===== TICKET ===== */
-#ticket-panel{
-  position:fixed;
-  bottom:20px;
-  left:12px;
-  right:12px;
-  background:#fff;
-  border-radius:14px;
-  padding:12px
-}
-#ticket-panel ul{
-  list-style:none;
-  padding:0;
-  margin:0
-}
-#ticket-panel li{
-  display:flex;
-  justify-content:space-between;
-  margin-bottom:4px
-}
-.ticket-actions{
-  display:flex;
-  gap:8px;
-  margin-top:8px
-}
 .ticket-actions button{
   flex:1;
   border:none;
   border-radius:10px;
   padding:12px;
   font-weight:600;
-  background:#43a047; /* verde */
-  color:#fff;
+  background:#fff; /* vuelve a blanco */
+  color:#000;
   cursor:pointer;
+}
+
+/* Vista previa de WhatsApp: verde */
+.ticket-actions button.preview{
+  background:#43a047;
+  color:#fff;
 }
 
 /* ===== MODALES ===== */
@@ -191,44 +129,6 @@ main{
   font-weight:600
 }
 
-/* ===== BOTONES CANTIDAD ===== */
-.btns.qty{
-  display:grid;
-  grid-template-columns:repeat(5,1fr);
-  gap:8px
-}
-.btns.qty button{
-  padding:10px 0;
-  border:1px solid #000;
-  border-radius:12px;
-  background:#43a047; /* verde */
-  font-weight:600;
-  color:#fff;
-  cursor:pointer;
-}
-
-/* ===== BOTONES UNIDAD ===== */
-.btns.unit{
-  display:flex;
-  gap:8px
-}
-.btns.unit button{
-  flex:1;
-  padding:10px 0;
-  border:1px solid #000;
-  border-radius:12px;
-  background:#43a047; /* verde */
-  font-weight:600;
-  color:#fff;
-  cursor:pointer;
-}
-
-/* ACTIVO */
-.btns button.active{
-  background:#000;
-  color:#fff
-}
-
 /* ===== BOTONES MODAL ===== */
 .modal .box > div:last-child{
   display:flex;
@@ -254,50 +154,3 @@ main{
   font-weight:600;
   cursor:pointer;
 }
-</style>
-</head>
-
-<body>
-
-<div id="drawer"></div>
-
-<header>
-  <div class="top">
-    <div class="menu" onclick="toggleDrawer()">≡</div>
-    <h1>Despensa</h1>
-    <div class="addMain" id="editBtn" onclick="toggleEditMode()">✏️ Editar</div>
-  </div>
-  <div class="search">
-    <input id="search" placeholder="Buscar..." oninput="render()">
-  </div>
-</header>
-
-<button id="addItemBtn" onclick="showAddItem()">➕ Añadir artículo</button>
-
-<main id="list"></main>
-
-<div id="ticket-panel">
-  <strong>🧾 Ticket</strong>
-  <ul id="ticketList"></ul>
-  <div class="ticket-actions">
-    <button onclick="printTicket()">🖨️ Imprimir</button>
-    <button onclick="sendWhatsApp()">📲 WhatsApp</button>
-    <button onclick="resetTicket()">🔄 Nuevo</button>
-  </div>
-</div>
-
-<div id="confirmModal" class="modal">
-  <div class="box">
-    <p id="confirmText"></p>
-    <div>
-      <button id="add" onclick="confirmDelete()">Aceptar</button>
-      <button id="cancel" onclick="closeConfirm()">Cancelar</button>
-    </div>
-  </div>
-</div>
-
-<div id="print-ticket"></div>
-
-<script src="app.js"></script>
-</body>
-</html>
