--- a/index.html
+++ b/index.html
@@ -35,26 +35,32 @@ main{padding:12px;padding-bottom:260px}
 .del{background:#ff3b30;color:#fff}
 
 /* ===== BOTONES CANTIDAD / UNIDAD ===== */
+.btns.qty,
+.btns.unit{
+  display:flex;
+  flex-wrap:wrap;
+  gap:8px;
+  justify-content:flex-start;
+  margin-bottom:12px;
+}
 .btns.qty button,
 .btns.unit button{
-  background:#fff;
-  color:#000;
-  border:1px solid #000;
-  border-radius:12px;
-  padding:8px 0;
-  font-weight:600;
-  cursor:pointer;
+  flex:1 0 30px; /* tamaño mínimo fijo */
   min-width:36px;
   height:36px;
+  padding:0;
+  border:1px solid #000;
+  border-radius:12px;
+  background:#fff;
+  color:#000;
+  font-weight:600;
   display:flex;
   align-items:center;
   justify-content:center;
+  cursor:pointer;
   font-size:14px;
 }
-.btns button.active{
-  background:#000;
-  color:#fff;
-}
+.btns button.active{background:#000;color:#fff;}
 
 /* ===== TICKET ===== */
 #ticket-panel{position:fixed;bottom:20px;left:12px;right:12px;background:#fff;border-radius:14px;padding:12px}
@@ -65,16 +71,16 @@ main{padding:12px;padding-bottom:260px}
 
 /* ===== MODALES ===== */
 .modal{position:fixed;inset:0;background:rgba(0,0,0,.4);display:none;align-items:center;justify-content:center;z-index:30}
-.modal .box{background:#fff;border-radius:16px;padding:20px;width:90%;max-width:360px}
+.modal .box{background:#fff;border-radius:16px;padding:20px;width:90%;max-width:360px;display:flex;flex-direction:column;gap:12px}
 .modal h3{margin:0 0 12px;text-align:center}
 .modal p{margin:14px 0 6px;font-weight:600}
 
 /* ===== BOTONES VERDE / ROJO ===== */
 .btn-green{background:#43a047;color:#fff;border:none;border-radius:12px;padding:12px;font-weight:600;cursor:pointer}
 .btn-red{background:#ff3b30;color:#fff;border:none;border-radius:12px;padding:12px;font-weight:600;cursor:pointer}
+
 </style>
 </head>
-
 <body>
 
 <div id="drawer"></div>
@@ -118,119 +124,95 @@ main{padding:12px;padding-bottom:260px}
 
 <script>
 // ===== ELEMENTOS DOM =====
-const drawer = document.getElementById("drawer");
-const search = document.getElementById("search");
-const list = document.getElementById("list");
-const ticketList = document.getElementById("ticketList");
-const confirmModal = document.getElementById("confirmModal");
-const confirmText = document.getElementById("confirmText");
-const addItemBtn = document.getElementById("addItemBtn");
-const editBtn = document.getElementById("editBtn");
+const drawer=document.getElementById("drawer");
+const search=document.getElementById("search");
+const list=document.getElementById("list");
+const ticketList=document.getElementById("ticketList");
+const confirmModal=document.getElementById("confirmModal");
+const confirmText=document.getElementById("confirmText");
+const addItemBtn=document.getElementById("addItemBtn");
+const editBtn=document.getElementById("editBtn");
 
 // ===== MODO EDICIÓN =====
-let editMode = false;
-function toggleEditMode(){ editMode=!editMode; render(); }
+let editMode=false;
+function toggleEditMode(){editMode=!editMode;render();}
 
 // ===== CATEGORÍAS =====
-const categories = [
-"Aguas y refrescos","Cerveza, vinos y licores","Café y té","Frutas y verduras",
-"Lácteos y huevos","Carne","Pescado","Limpieza","Congelados","Asiático","Otros"
-];
-
-let activeCat = categories[0];
-let items = JSON.parse(localStorage.items||"[]");
-let cart = JSON.parse(localStorage.cart||"[]");
-
-let deleteIndex = null;
-let deleteType = null;
+const categories=["Aguas y refrescos","Cerveza, vinos y licores","Café y té","Frutas y verduras","Lácteos y huevos","Carne","Pescado","Limpieza","Congelados","Asiático","Otros"];
+let activeCat=categories[0];
+let items=JSON.parse(localStorage.items||"[]");
+let cart=JSON.parse(localStorage.cart||"[]");
+let deleteIndex=null;
+let deleteType=null;
 
 // ===== DRAWER =====
-function toggleDrawer(){ drawer.classList.toggle("open"); }
-function renderDrawer(){
-  drawer.innerHTML = categories.map(c=>`<button class="${c===activeCat?"active":""}" onclick="activeCat='${c}';toggleDrawer();render()">${c}</button>`).join("");
-}
+function toggleDrawer(){drawer.classList.toggle("open");}
+function renderDrawer(){drawer.innerHTML=categories.map(c=>`<button class="${c===activeCat?"active":""}" onclick="activeCat='${c}';toggleDrawer();render()">${c}</button>`).join("");}
 
 // ===== RENDER PRINCIPAL =====
 function render(){
-  if(editMode){ addItemBtn.style.display="block"; editBtn.textContent="↩️ Volver"; }
-  else{ addItemBtn.style.display="none"; editBtn.textContent="✏️ Editar"; }
+  if(editMode){addItemBtn.style.display="block";editBtn.textContent="↩️ Volver";}
+  else{addItemBtn.style.display="none";editBtn.textContent="✏️ Editar";}
   renderDrawer();
-  const q = search.value.toLowerCase();
-  list.innerHTML = items.filter(i=>q?i.name.toLowerCase().includes(q):i.cat===activeCat)
-    .map((i,idx)=>`<div class="item"><div><strong>${i.name}</strong>${q?`<div style="font-size:12px;opacity:.6">${i.cat}</div>`:""}</div><div>${editMode?`<button class="del" onclick="askDeleteItem(${idx})">✕</button>`:`<button class="add" onclick="showQtyModal('${i.name}')">+</button>`}</div></div>`).join("");
+  const q=search.value.toLowerCase();
+  list.innerHTML=items.filter(i=>q?i.name.toLowerCase().includes(q):i.cat===activeCat).map((i,idx)=>`<div class="item"><div><strong>${i.name}</strong>${q?`<div style="font-size:12px;opacity:.6">${i.cat}</div>`:""}</div><div>${editMode?`<button class="del" onclick="askDeleteItem(${idx})">✕</button>`:`<button class="add" onclick="showQtyModal('${i.name}')">+</button>`}</div></div>`).join("");
   renderTicket();
-  localStorage.items = JSON.stringify(items);
-  localStorage.cart = JSON.stringify(cart);
+  localStorage.items=JSON.stringify(items);
+  localStorage.cart=JSON.stringify(cart);
 }
 
 // ===== NUEVO ARTÍCULO =====
 function showAddItem(){
-  const m = document.createElement("div");
-  m.className="modal"; m.style.display="flex";
-  m.innerHTML = `<div class="box"><h3>Nuevo artículo</h3><input id="iname" placeholder="Nombre"><select id="icat">${categories.map(c=>`<option>${c}</option>`).join("")}</select><div><button id="save" class="btn-green">Guardar</button><button id="cancel" class="btn-red">Cancelar</button></div></div>`;
+  const m=document.createElement("div");m.className="modal";m.style.display="flex";
+  m.innerHTML=`<div class="box"><h3>Nuevo artículo</h3><input id="iname" placeholder="Nombre"><select id="icat">${categories.map(c=>`<option>${c}</option>`).join("")}</select><div><button id="save" class="btn-green">Guardar</button><button id="cancel" class="btn-red">Cancelar</button></div></div>`;
   document.body.appendChild(m);
-  m.querySelector("#cancel").onclick = ()=>m.remove();
-  m.querySelector("#save").onclick = ()=>{
-    const n = m.querySelector("#iname").value.trim();
-    const c = m.querySelector("#icat").value;
-    if(n){ items.push({name:n,cat:c}); m.remove(); render(); }
-  };
+  m.querySelector("#cancel").onclick=()=>m.remove();
+  m.querySelector("#save").onclick=()=>{const n=m.querySelector("#iname").value.trim();const c=m.querySelector("#icat").value;if(n){items.push({name:n,cat:c});m.remove();render();}};
 }
 
 // ===== MODAL CANTIDAD / UNIDAD =====
 function showQtyModal(name){
   let qty=1; let unit="UNIDAD";
-  const m=document.createElement("div");
-  m.className="modal"; m.style.display="flex";
+  const m=document.createElement("div");m.className="modal";m.style.display="flex";
   m.innerHTML=`<div class="box"><h3>${name}</h3>
   <p>Cantidad</p><div class="btns qty">${[1,2,3,4,5,6,7,8,9,10].map(n=>`<button>${n}</button>`).join("")}</div>
   <p>Unidad</p><div class="btns unit"><button class="active">UNIDAD</button><button>KG</button><button>CAJA</button></div>
-  <div><button id="add" class="btn-green">Añadir</button><button id="cancel" class="btn-red">Cancelar</button></div></div>`;
+  <div style="display:flex;gap:8px;"><button id="add" class="btn-green">Añadir</button><button id="cancel" class="btn-red">Cancelar</button></div></div>`;
   document.body.appendChild(m);
 
   m.querySelectorAll(".qty button").forEach(b=>b.onclick=()=>{
-    m.querySelectorAll(".qty button").forEach(x=>x.classList.remove("active"));
-    b.classList.add("active"); qty=+b.textContent;
+    m.querySelectorAll(".qty button").forEach(x=>x.classList.remove("active"));b.classList.add("active");qty=+b.textContent;
   });
   m.querySelectorAll(".unit button").forEach(b=>b.onclick=()=>{
-    m.querySelectorAll(".unit button").forEach(x=>x.classList.remove("active"));
-    b.classList.add("active"); unit=b.textContent;
+    m.querySelectorAll(".unit button").forEach(x=>x.classList.remove("active"));b.classList.add("active");unit=b.textContent;
   });
 
-  m.querySelector("#cancel").onclick = ()=>m.remove();
-  m.querySelector("#add").onclick = ()=>{
-    const found = cart.find(c=>c.name===name&&c.unit===unit);
-    if(found) found.qty+=qty;
-    else cart.push({name,qty,unit});
-    m.remove(); render();
-  };
+  m.querySelector("#cancel").onclick=()=>m.remove();
+  m.querySelector("#add").onclick=()=>{const found=cart.find(c=>c.name===name&&c.unit===unit);if(found)found.qty+=qty;else cart.push({name,qty,unit});m.remove();render();};
 }
 
 // ===== TICKET =====
-function renderTicket(){
-  ticketList.innerHTML = cart.map((c,i)=>`<li>${c.name} - ${c.qty} ${c.unit} <button class="del" onclick="askDeleteTicket(${i})">✕</button></li>`).join("");
-}
+function renderTicket(){ticketList.innerHTML=cart.map((c,i)=>`<li>${c.name} - ${c.qty} ${c.unit} <button class="del" onclick="askDeleteTicket(${i})">✕</button></li>`).join("");}
 
 // ===== ELIMINAR =====
-function askDeleteItem(i){ deleteType="item"; deleteIndex=i; confirmText.textContent=`¿Eliminar ${items[i].name}?`; confirmModal.style.display="flex"; }
-function askDeleteTicket(i){ deleteType="ticket"; deleteIndex=i; confirmText.textContent=`¿Eliminar ${cart[i].name}?`; confirmModal.style.display="flex"; }
-function confirmDelete(){ if(deleteType==="item") items.splice(deleteIndex,1); if(deleteType==="ticket") cart.splice(deleteIndex,1); closeConfirm(); render(); }
-function closeConfirm(){ confirmModal.style.display="none"; }
-function resetTicket(){ cart=[]; render(); }
+function askDeleteItem(i){deleteType="item";deleteIndex=i;confirmText.textContent=`¿Eliminar ${items[i].name}?`;confirmModal.style.display="flex";}
+function askDeleteTicket(i){deleteType="ticket";deleteIndex=i;confirmText.textContent=`¿Eliminar ${cart[i].name}?`;confirmModal.style.display="flex";}
+function confirmDelete(){if(deleteType==="item")items.splice(deleteIndex,1);if(deleteType==="ticket")cart.splice(deleteIndex,1);closeConfirm();render();}
+function closeConfirm(){confirmModal.style.display="none";}
+function resetTicket(){cart=[];render();}
 
 // ===== WHATSAPP =====
 function buildWhatsAppText(){
   let txt="🧾 *PEDIDO*\n\n";
   categories.forEach(cat=>{
-    const lines = cart.filter(c=>{ const it = items.find(i=>i.name===c.name); return it && it.cat===cat; });
-    if(lines.length){ txt+=cat.toUpperCase()+"\n"; lines.forEach(l=>{ txt+=`- ${l.name}: ${l.qty} ${l.unit}\n`; }); txt+="\n"; }
+    const lines=cart.filter(c=>{const it=items.find(i=>i.name===c.name);return it&&it.cat===cat;});
+    if(lines.length){txt+=cat.toUpperCase()+"\n";lines.forEach(l=>{txt+=`- ${l.name}: ${l.qty} ${l.unit}\n`;});txt+="\n";}
   });
   return txt.trim();
 }
-
 function previewWhatsApp(){
-  const m=document.createElement("div"); m.className="modal"; m.style.display="flex";
-  m.innerHTML=`<div class="box"><h3>Vista previa WhatsApp</h3><textarea style="width:100%;height:200px">${buildWhatsAppText()}</textarea><div><button id="cancel" class="btn-red">Cancelar</button><button id="send" class="btn-green">Enviar</button></div></div>`;
+  const m=document.createElement("div");m.className="modal";m.style.display="flex";
+  m.innerHTML=`<div class="box"><h3>Vista previa WhatsApp</h3><textarea style="width:100%;height:200px">${buildWhatsAppText()}</textarea><div style="display:flex;gap:8px;"><button id="cancel" class="btn-red">Cancelar</button><button id="send" class="btn-green">Enviar</button></div></div>`;
   document.body.appendChild(m);
   m.querySelector("#cancel").onclick=()=>m.remove();
   m.querySelector("#send").onclick=()=>{
@@ -239,13 +221,11 @@ function previewWhatsApp(){
     m.remove();
   };
 }
-function sendWhatsApp(){ previewWhatsApp(); }
+function sendWhatsApp(){previewWhatsApp();}
 
 // ===== DATOS INICIALES =====
-if(items.length===0){ items=[{name:"Coca Cola",cat:"Aguas y refrescos"},{name:"Manzana",cat:"Frutas y verduras"}]; }
-
+if(items.length===0){items=[{name:"Coca Cola",cat:"Aguas y refrescos"},{name:"Manzana",cat:"Frutas y verduras"}];}
 render();
 </script>
-
 </body>
 </html>
