--- a/index.html
+++ b/index.html
@@ -35,30 +35,37 @@ main{padding:12px;padding-bottom:260px}
 .del{background:#ff3b30;color:#fff}
 
 /* ===== BOTONES CANTIDAD / UNIDAD ===== */
-.btns.qty,
-.btns.unit{
-  display:grid;
-  gap:8px;
-}
-.btns.qty{
-  grid-template-columns:repeat(5,36px);
-}
-.btns.unit{
-  grid-template-columns:repeat(3,1fr);
-}
-.btns.qty button,
-.btns.unit button{
-  width:36px;
+.btns.qty{display:flex;flex-wrap:wrap;gap:8px;justify-content:center;margin-bottom:12px;}
+.btns.qty button{
+  width:72px;
   height:36px;
-  padding:0;
-  border:1px solid #000;
-  border-radius:12px;
-  background:#fff;
-  color:#000;
-  font-weight:600;
   display:flex;
   align-items:center;
   justify-content:center;
+  border-radius:12px;
+  border:1px solid #000;
+  background:#fff;
+  color:#000;
+  font-weight:600;
+  cursor:pointer;
+  font-size:14px;
+}
+.btns.unit{
+  display:flex;
+  gap:8px;
+  margin-bottom:12px;
+}
+.btns.unit button{
+  flex:1;
+  height:44px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  border-radius:12px;
+  border:1px solid #000;
+  background:#fff;
+  color:#000;
+  font-weight:600;
   cursor:pointer;
   font-size:14px;
 }
@@ -66,6 +73,11 @@ main{padding:12px;padding-bottom:260px}
   background:#000;
   color:#fff;
 }
+
+/* ===== BOTONES MODAL PRINCIPAL ===== */
+.modal-actions{display:flex;gap:8px;margin-top:12px;}
+.modal-actions .btn-green{flex:2;}
+.modal-actions .btn-red{flex:1;}
 
 /* ===== TICKET ===== */
 #ticket-panel{position:fixed;bottom:20px;left:12px;right:12px;background:#fff;border-radius:14px;padding:12px}
@@ -83,18 +95,6 @@ main{padding:12px;padding-bottom:260px}
 /* ===== BOTONES VERDE / ROJO ===== */
 .btn-green{background:#43a047;color:#fff;border:none;border-radius:12px;padding:12px;font-weight:600;cursor:pointer}
 .btn-red{background:#ff3b30;color:#fff;border:none;border-radius:12px;padding:12px;font-weight:600;cursor:pointer}
-
-/* ===== BOTONES AÑADIR / CANCELAR MODAL ===== */
-.modal .box > div:last-child{
-  display:flex;
-  gap:8px;
-}
-.modal .box > div:last-child #add{
-  flex:2;
-}
-.modal .box > div:last-child #cancel{
-  flex:1;
-}
 </style>
 </head>
 
@@ -130,7 +130,7 @@ main{padding:12px;padding-bottom:260px}
 <div id="confirmModal" class="modal">
   <div class="box">
     <p id="confirmText"></p>
-    <div>
+    <div class="modal-actions">
       <button id="add" class="btn-green" onclick="confirmDelete()">Aceptar</button>
       <button id="cancel" class="btn-red" onclick="closeConfirm()">Cancelar</button>
     </div>
@@ -190,7 +190,7 @@ function render(){
 function showAddItem(){
   const m = document.createElement("div");
   m.className="modal"; m.style.display="flex";
-  m.innerHTML = `<div class="box"><h3>Nuevo artículo</h3><input id="iname" placeholder="Nombre"><select id="icat">${categories.map(c=>`<option>${c}</option>`).join("")}</select><div><button id="save" class="btn-green">Guardar</button><button id="cancel" class="btn-red">Cancelar</button></div></div>`;
+  m.innerHTML = `<div class="box"><h3>Nuevo artículo</h3><input id="iname" placeholder="Nombre"><select id="icat">${categories.map(c=>`<option>${c}</option>`).join("")}</select><div class="modal-actions"><button id="save" class="btn-green">Guardar</button><button id="cancel" class="btn-red">Cancelar</button></div></div>`;
   document.body.appendChild(m);
   m.querySelector("#cancel").onclick = ()=>m.remove();
   m.querySelector("#save").onclick = ()=>{
@@ -208,10 +208,7 @@ function showQtyModal(name){
   m.innerHTML=`<div class="box"><h3>${name}</h3>
   <p>Cantidad</p><div class="btns qty">${[1,2,3,4,5,6,7,8,9,10].map(n=>`<button>${n}</button>`).join("")}</div>
   <p>Unidad</p><div class="btns unit"><button class="active">UNIDAD</button><button>KG</button><button>CAJA</button></div>
-  <div style="margin-top:12px; gap:8px; display:flex;">
-    <button id="add" class="btn-green">Añadir</button>
-    <button id="cancel" class="btn-red">Cancelar</button>
-  </div></div>`;
+  <div class="modal-actions"><button id="add" class="btn-green">Añadir</button><button id="cancel" class="btn-red">Cancelar</button></div></div>`;
   document.body.appendChild(m);
 
   m.querySelectorAll(".qty button").forEach(b=>b.onclick=()=>{
@@ -256,13 +253,13 @@ function buildWhatsAppText(){
 
 function previewWhatsApp(){
   const m=document.createElement("div"); m.className="modal"; m.style.display="flex";
+  // Invertimos botones: Enviar grande verde, Cancelar pequeño rojo
   m.innerHTML=`<div class="box"><h3>Vista previa WhatsApp</h3>
-    <textarea style="width:100%;height:200px">${buildWhatsAppText()}</textarea>
-    <div style="margin-top:12px; gap:8px; display:flex;">
-      <button id="send" class="btn-green">Enviar</button>
-      <button id="cancel" class="btn-red">Cancelar</button>
-    </div>
-  </div>`;
+  <textarea style="width:100%;height:200px">${buildWhatsAppText()}</textarea>
+  <div class="modal-actions">
+    <button id="send" class="btn-green">Enviar</button>
+    <button id="cancel" class="btn-red">Cancelar</button>
+  </div></div>`;
   document.body.appendChild(m);
   m.querySelector("#cancel").onclick=()=>m.remove();
   m.querySelector("#send").onclick=()=>{
